trying to fix text align in history transaction blocks

--- a/src/content.blocks/history.scss
+++ b/src/content.blocks/history.scss
@@ -24,4 +24,9 @@
     width: 100%;
     margin-top: 0;
   }
+
+  // todo: fixme
+  .text__word {
+    vertical-align: text-bottom;
+  }
 }
